--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ development:
   database: demo_app_development
   pool: 5
   username: root
-  password:
+  password: misti
   socket: /var/run/mysqld/mysqld.sock
 
 # Warning: The database defined as "test" will be erased and
@@ -25,7 +25,7 @@ test:
   database: demo_app_test
   pool: 5
   username: root
-  password:
+  password: misti
   socket: /var/run/mysqld/mysqld.sock
 
 production:
@@ -35,5 +35,5 @@ production:
   database: demo_app_production
   pool: 5
   username: root
-  password:
+  password: misti
   socket: /var/run/mysqld/mysqld.sock
